<resources>
    <string name="app_name">DailySnaps</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to DailySnaps!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_image">login_image</string>
    <string name="login_signup">login_signup</string>
    <string name="name">Nama</string>
    <string name="logout">Keluar</string>
    <string name="photo">photo</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description of the image</string>
    <string name="switch_camera">switch_camera</string>
    <string name="camerax">CameraX</string>
    <string name="empty_image_warning">Please insert the image file first</string>
    <string name="error_empty_field">Can not be empty</string>
    <string name="error_short_password">Password must not be less than 8 characters</string>
    <string name="setting">Setting</string>
    <string name="login_subtitle">Please sign in to continue</string>
    <string name="register_subtitle">Create an account first before sharing stories</string>
    <string name="sign_up">Don\'t have an account? Register</string>
    <string name="sign_in">Already have account? Login</string>
    <string name="subtitle_welcome">Now, you can share your stories with Daily Snaps</string>
    <string name="title_detail">Detail Story</string>
    <string name="title_add_story">Upload Story</string>
    <string name="detail_description">Description</string>
    <string name="uploaded_by">Uploaded by</string>
    <string name="detail_date">Date upload</string>
    <string name="success_camerax">Successfully took a picture</string>
    <string name="failed_camerax">Failed to take picture</string>
    <string name="failed_display_camera">Failed to display camera</string>
    <string name="open_document">Open Document: No media selected</string>
    <string name="photo_picker">Photo Picker: No media selected</string>
    <string name="photo_picker_not_available">Photo Picker is not available on this device</string>
    <string name="granted">Permission request granted</string>
    <string name="denied">Permission request denied</string>
    <string name="empty_story">There isn\'t any story</string>
    <string name="empty_detail_story">There are no story details</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="success_title">Success</string>
    <string name="failed_title">Failed</string>
    <string name="logout_title">Log out</string>
    <string name="logout_success">Log out successfully</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="yes_title">Yes</string>
    <string name="no_title">No</string>
    <string name="try_again">Try Again</string>
    <string name="continue_title">Continue</string>
    <string name="close_title">Close</string>
    <string name="upload_time">Upload Time</string>
    <string name="image">Image</string>
    <string name="illustration_welcome">Illustration Welcome</string>
    <string name="illustration_register">Illustration register</string>
    <string name="illustration_login">Illustration login</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="invalid_date">Invalid Date</string>
</resources>